deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-jira-manual-hook
  namespace: gitlab-jira-manual-hook
spec:
  selector:
    app: gitlab-jira-manual-hook
  ports:
    - name: http
      port: 80
      targetPort: 8000
